--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -89,8 +89,8 @@
                                 <a class="nav-link" aria-current="page" href="#">MyAccount({{app.user.firstname}})</a>
                             </li>
                             <li class="nav-item">
-                                {# <a class="nav-link" aria-current="page" href="{{ path('app_logout') }}">Logout</a> #}
-                                <a class="nav-link" aria-current="page" href="#">Logout</a>
+                                <a class="nav-link" aria-current="page" href="{{ path('app_logout') }}">Logout</a>
+                                {# <a class="nav-link" aria-current="page" href="#">Logout</a> #}
                             </li>
                             {% endif %}
                         </ul>
