--- a/templates/back/security/login.html.twig
+++ b/templates/back/security/login.html.twig
@@ -18,10 +18,10 @@
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control mb-3" autocomplete="current-password" required>
+    <input type="password" name="password" id="inputPassword" class="form-control btn-sm mb-3" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
+           value="{{ csrf_token('authenticate_') }}"
     >
 
     {#
