--- a/templates/front/security/login.html.twig
+++ b/templates/front/security/login.html.twig
@@ -8,18 +8,20 @@
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    {% if app.user %}
+    {# {% if app.user %}
         <div class="mb-3">
             You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
         </div>
-    {% endif %}
+    {% endif %} #}
 
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" autocomplete="email" required autofocus>
     <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control btn-sm mb-3" autocomplete="current-password" required>
-
+    <input type="password" name="password" id="inputPassword" class="form-control btn-sm mb-1" autocomplete="current-password" required>
+    <div class="mb-3">
+        <span><a class="text-decoration-none" href="{{ path('app_register')}}">ou créez un compte</a></span>
+    </div>
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate_') }}"
     >
