--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,6 +45,7 @@
     <!-- Custom styles for this template -->
     {# <link href="carousel.css" rel="stylesheet"> #}
     <link href=" {{ asset('assets/css/carousel.css') }} "  rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   </head>
   <body>
     <header>
@@ -55,45 +56,50 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <div class="d-flex justify-content-between me-auto mx-auto">
+                    <div class="d-flex justify-content-between me-auto mx-auto my-2">
                         <ul class="navbar-nav mb-2 mb-md-0">
-                            <li class="nav-item  mx-md-2">
+                            <li class="nav-item mx-md-2">
                                 <form class="d-flex">
-                                <button class="btn btn-secondary" type="submit">
-                                    <a class="nav-link active py-0" href="#">Deposer une annonce</a>
-                                </button>
+                                  <button class="btn btn-secondary mb-2" type="submit">
+                                      {# - Check if {app.user}
+                                       # - OK : Add offer page.
+                                       # -    {offer page | Form} : {ENTITY: Product + User}
+                                       # - Else: path('login') then {OK} process.
+                                      #}
+                                      <a class="nav-link active py-0" href="#">Deposer une annonce</a>
+                                  </button>
                                 </form>
                             </li>
                             <li class="nav-item">
                                 <form class="d-flex">
-                                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                                    <button class="btn btn-outline-secondary" type="submit">Search</button>
+                                    <input class="form-control rounded-0" type="search" placeholder="Search" aria-label="Search">
+                                    <button class="btn btn-outline-secondary rounded-0" type="submit">Search</button>
                                 </form>
                             </li>
                         </ul>
                     </div>
                     <form class="d-flex">
-                        <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                            {% if app.user is null %}
-                            <li class="nav-item">
-                                {# <a class="nav-link" aria-current="page" href="{{ path('app_login') }}">Login</a> #}
-                                <a class="nav-link" aria-current="page" href="{{ path('app_login')}}">Login</a>
-                            </li>
-                            <li class="nav-item">
-                                {# <a class="nav-link" aria-current="page" href="{{ path('register') }}">Register</a> #}
-                                <a class="nav-link" aria-current="page" href="{{ path('app_register') }}">Register</a>
-                            </li>
-                            {% else %}
-                            <li class="nav-item">
-                                {# <a class="nav-link" aria-current="page" href="{{ path('account') }}">MyAccount({{app.user.firstname}})</a> #}
-                                <a class="nav-link" aria-current="page" href="{{ path('app_account') }}">MyAccount({{app.user.firstname}})</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" aria-current="page" href="{{ path('app_logout') }}">Logout</a>
-                                {# <a class="nav-link" aria-current="page" href="#">Logout</a> #}
-                            </li>
-                            {% endif %}
-                        </ul>
+                      <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                          {% if app.user is null %}
+                          <li class="nav-item">
+                              {# <a class="nav-link" aria-current="page" href="{{ path('app_login') }}">Login</a> #}
+                              <a class="nav-link" aria-current="page" href="{{ path('app_login')}}">Login</a>
+                          </li>
+                          <li class="nav-item">
+                              {# <a class="nav-link" aria-current="page" href="{{ path('register') }}">Register</a> #}
+                              <a class="nav-link" aria-current="page" href="{{ path('app_register') }}">Register</a>
+                          </li>
+                          {% else %}
+                          <li class="nav-item">
+                              {# <a class="nav-link" aria-current="page" href="{{ path('account') }}">MyAccount({{app.user.firstname}})</a> #}
+                              <a class="nav-link" aria-current="page" href="{{ path('app_account') }}">MyAccount({{app.user.firstname}})</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" aria-current="page" href="{{ path('app_logout') }}">Logout</a>
+                              {# <a class="nav-link" aria-current="page" href="#">Logout</a> #}
+                          </li>
+                          {% endif %}
+                      </ul>
                     </form>
                 </div>
             </div>
