--- a/templates/front/account/index.html.twig
+++ b/templates/front/account/index.html.twig
@@ -5,9 +5,9 @@
 {% block content %}
     <h2>Bonjour {{ app.user.username }} .</h2>
     <ul class="p-0 d-flex flex-row align-items-start">
-        <li class="btn btn-primary ml-0 m-2"> <a href="{{ path('app_account_cpwd') }}" class="text-white text-decoration-none" >Modifier mdp</a></li>
-        {# <li class="btn btn-primary m-2"> <a href="{{ path('') }}" class="text-white text-decoration-none" >Modifier mes informations</a></li>
-        <li class="btn btn-primary m-2"> <a href="{{ path('') }}" class="text-white text-decoration-none" >Mon panier</a></li>
-        <li class="btn btn-primary m-2"> <a href="{{ path('') }}" class="text-white text-decoration-none" >Mes offres</a></li> #}
+        <li class="ml-0 m-2 list-style-none"> <a href="{{ path('app_account_cpwd') }}" class="" ><button class="btn btn-primary text-white text-decoration-none ">Modifier mdp</button></a></li>
+        <li class="btn btn-primary m-2"> <a href="{{ path('app_account_offers') }}" class="text-white text-decoration-none" >Modifier mes informations</a></li>
+        {# <li class="btn btn-primary m-2"> <a href="{{ path('') }}" class="text-white text-decoration-none" >Mes offres</a></li> #} 
+        {#<li class="btn btn-primary m-2"> <a href="{{ path('') }}" class="text-white text-decoration-none" >Mon panier</a></li>#}
     </ul>
 {% endblock %}
