--- a/templates/front/product/index.html.twig
+++ b/templates/front/product/index.html.twig
@@ -7,6 +7,10 @@
     <div class="row">
     {% for product in products %}
         {{ component('card', {'id' : product.id}) }}
+    {% else %}
+        <div class="col-6">
+            <p> Aucun produit disponible.</p>
+        </div>
     {% endfor %}
     </div>
 {% endblock %}
