--- a/templates/front/product/show.html.twig
+++ b/templates/front/product/show.html.twig
@@ -9,7 +9,7 @@
       <div class="col-md-6 border-end">
         <div class="d-flex flex-column justify-content-center">
           <div class="product_main_image">	
-            <img src="{{ '.jpg' in product.imageFilename ? asset('images/'~ product.imageFilename ):asset('images/products/default-product_main_image.jpg') }}" id="product_main_product_image" width="350">
+            <img src="{{ vich_uploader_asset(product, 'imageFile') ? vich_uploader_asset(product, 'imageFile'):asset('images/products/default-product_main_image.jpg') }}" id="product_main_product_image" width="350">
           </div>
           <div class="product_thumbnail_images">
             <ul id="product_thumbnail">
