--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,14 +8,12 @@
     <meta name="generator" content="Hugo 0.84.0">
     <title>{% block title %}Aliex{% endblock %}</title>
 
-    {# <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/"> #}
-
-    
+    {# <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/carousel/"> #} 
 
     <!-- Bootstrap core CSS -->
-    {# <link href="/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> #}
     <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ asset('assets/css/aliex.css') }}" rel="stylesheet">
+    <link href="{{ asset('assets/css/product.css') }}" rel="stylesheet">
     <!-- Favicons -->
     {# <link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -44,7 +42,6 @@
 
     
     <!-- Custom styles for this template -->
-    {# <link href="carousel.css" rel="stylesheet"> #}
     <link href=" {{ asset('assets/css/carousel.css') }} "  rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
   </head>
@@ -83,21 +80,27 @@
                       <ul class="navbar-nav me-auto mb-2 mb-md-0">
                           {% if app.user is null %}
                           <li class="nav-item">
-                              {# <a class="nav-link" aria-current="page" href="{{ path('app_login') }}">Login</a> #}
                               <a class="nav-link" aria-current="page" href="{{ path('app_login')}}">Login</a>
                           </li>
                           <li class="nav-item">
-                              {# <a class="nav-link" aria-current="page" href="{{ path('register') }}">Register</a> #}
                               <a class="nav-link" aria-current="page" href="{{ path('app_register') }}">Register</a>
                           </li>
                           {% else %}
-                          <li class="nav-item">
-                              {# <a class="nav-link" aria-current="page" href="{{ path('account') }}">MyAccount({{app.user.firstname}})</a> #}
+                          {# <li class="nav-item">
                               <a class="nav-link" aria-current="page" href="{{ path('app_account') }}">MyAccount({{app.user.firstname}})</a>
+                          </li> #}
+                          <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="{{ path('app_account') }}">
+                            <div class="account-profile-menu">
+                                <p>{{app.user.firstname}}</p>
+                                <div class="account-profile-picture account-small-profile-picture">
+                                  <img width="40px" alt="Anne Hathaway picture" src="http://upload.wikimedia.org/wikipedia/commons/e/e1/Anne_Hathaway_Face.jpg">
+                                </div>
+                            </div>
+                              </a>
                           </li>
                           <li class="nav-item">
                               <a class="nav-link" aria-current="page" href="{{ path('app_logout') }}">Logout</a>
-                              {# <a class="nav-link" aria-current="page" href="#">Logout</a> #}
                           </li>
                           {% endif %}
                       </ul>
@@ -123,7 +126,7 @@
                 <div class="carousel-caption text-start">
                   <h1>Example headline.</h1>
                   <p>Some representative placeholder content for the first slide of the carousel.</p>
-                  <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                  <p><a class="btn btn-lg btn-primary" href="{{ path('app_register') }}">Sign up today</a></p>
                 </div>
               </div>
             </div>
@@ -243,7 +246,7 @@
 
 
       <!-- FOOTER -->
-      <footer class="container">
+      <footer class="container footer">
         <p class="float-end"><a href="#">Back to top</a></p>
         <p>&copy; 2022 Aliex, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
       </footer>
