--- a/templates/front/default/index.html.twig
+++ b/templates/front/default/index.html.twig
@@ -6,7 +6,7 @@
   <!-- SESSION : SEARCH BY CATEGORY --> 
   <div class="">
     <div class="mx-auto">
-      <p class="">Des millions de petites annonces et autant d’occasions de se faire plaisir</p>
+      <h4 class="">Des millions de petites annonces et autant d’occasions pour se faire plaisir</h4>
       <div class="row">
         <div class="custom-control custom-radio custom-control-inline col-3 col-sm-2 mb-2 mx-2">
           <input type="radio" id="customRadioInline1" name="customRadioInline1" class="custom-control-input">
@@ -45,7 +45,6 @@
 
   <!-- SESSION : SEARCH BY ? --> 
   <div class="row">
-    {% if app.user is not null %} <h2> Hello {{ app.user.firstname }}!</h2> {% endif %}
     <hr class="featurette-divider">
     <div class="col-lg-4">
       <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
