Fix BACK DEFAULT ROUTE

--- a/templates/back/default/index.html.twig
+++ b/templates/back/default/index.html.twig
@@ -2,9 +2,8 @@
 
 {% block title %}ADMIN - Aliex{% endblock %}
 
-{% block carousel %}{% endblock %}
-
 {% block content %}
 <div class="">
+    <h2> ADMIN</h2>
 </div>
 {% endblock %}
