--- a/templates/front/account/index.html.twig
+++ b/templates/front/account/index.html.twig
@@ -3,10 +3,10 @@
 {% block title %}{{ app.user.username }} - Aliex{% endblock %}
 
 {% block content %}
-<div class="account-main-container">
+<div class="container account-main-container">
     <!-- HEADER -->
-    <header class="account-header account-block">
-        <ul class="account-header-menu account-horizontal-list">
+    <header class="row account-header account-block">
+        <ul class="account-header-menu account-horizontal-list d-flex justify-content-between">
             <li>
                 <a class="account-header-menu-tab" href="#1"><span class="icon entypo-cog account-scnd-font-color"></span>Settings</a>
             </li>
@@ -22,9 +22,9 @@
             </li>
         </ul>
     </header>
-    <div class="">
+    <div class="row d-flex justify-content-between align-items-start">
         <!-- LEFT-CONTAINER -->
-        <div class="account-left-container account-container">
+        <div class="account-left-container account-container col-md-4 col-sm-12">
             <div class="account-menu-box account-block"> <!-- MENU BOX (LEFT-CONTAINER) -->
                 <h2 class="account-titular">MENU</h2>
                 <ul class="account-menu-box-menu">
@@ -54,7 +54,7 @@
         </div>
 
         <!-- MIDDLE-CONTAINER -->
-        <div class="account-middle-container account-container">
+        <div class="account-middle-container account-container col-md-3 col-sm-12">
             <div class="account-profile account-block"> <!-- PROFILE (MIDDLE-CONTAINER) -->
                 <a class="add-button" href="#28"><span class="icon entypo-plus account-scnd-font-color"></span></a>
                 <div class="account-profile-picture account-big-profile-picture clear">
@@ -64,7 +64,7 @@
                 <div class="account-profile-description">
                     <p class="account-scnd-font-color">Marchande - Vendeuse vip</p>
                 </div>
-                <ul class="account-profile-options account-horizontal-list">
+                <ul class="account-profile-options account-horizontal-list d-flex justify-content-around">
                     <li><a class="account-user-comments" href="#40"><p><span class="icon fontawesome-comment-alt account-scnd-font-color"></span>23</li></p></a>
                     <li><a class="account-user-views" href="#41"><p><span class="icon fontawesome-eye-open account-scnd-font-color"></span>841</li></p></a>
                     <li><a class="account-user-likes" href="#42"><p><span class="icon fontawesome-heart-empty account-scnd-font-color"></span>49</li></p></a>
@@ -81,7 +81,7 @@
         </div>
 
         <!-- RIGHT-CONTAINER -->
-        <div class="account-right-container account-container">
+        <div class="account-right-container account-container col-md-4 col-sm-12">
             <div class="account-calendar-day account-block"> <!-- CALENDAR DAY (RIGHT-CONTAINER) -->
                 <div class="account-arrow-btn-container">
                     <!-- <a class="account-arrow-btn left" href="#200"><span class="icon fontawesome-angle-left"></span></a> -->
@@ -91,15 +91,6 @@
                 <p class="account-the-day">26</p>
                 <!-- <a class="account-add-event button" href="#27">ADD EVENT</a> -->
             </div>
-            <!-- <div class="account-join-newsletter account-block"> 
-                <h2 class="account-titular">S'INCRIRE À LA NEWSLETTER</h2>
-                <div class="input-container">
-                    <input type="text" placeholder="john.deo@gmail.com" class="email text-input">
-                    <div class="input-icon envelope-icon-newsletter"><span class="fontawesome-envelope account-scnd-font-color"></span></div>
-                </div>
-                <a class="subscribe button" href="#21">S'INSCRIRE</a>
-            </div> -->
-
         </div> <!-- end right-container -->
     </div>
 </div> <!-- end main-container -->
