--- a/templates/front/product/show.html.twig
+++ b/templates/front/product/show.html.twig
@@ -55,11 +55,11 @@
               </ul>
             </div>
           </div>
-          <div class="d-flex flex-row mt-5 gap-3">	
-            <button class="btn btn-outline-dark">Acheter maintenant</button>
-            <button class="btn btn-dark">Ajouter au panier</button>	
+          <div class="product_button d-flex flex-row mt-5 gap-3">	
+            <button class="btn btn-dark"><a href="#">Acheter maintenant</a></button>	
+            <button class="btn btn-dark"><a href="#">Ajouter au panier</a></button>	
             {% if product.owner == app.user %}
-              <a href="{{ path('app_edit_product',{'id':product.id}) }}"><button class="btn btn-dark">Modifier</button></a>
+              <button class="btn btn-dark"><a href="{{ path('app_edit_product',{'id':product.id}) }}">Modifier</a></button>	
             {% endif %}	
           </div>
          </div>
