--- a/templates/front/product/show.html.twig
+++ b/templates/front/product/show.html.twig
@@ -56,10 +56,12 @@
             </div>
           </div>
           <div class="product_button d-flex flex-row mt-5 gap-3">	
-            <button class="btn btn-dark"><a href="#">Acheter maintenant</a></button>	
-            <button class="btn btn-dark"><a href="#">Ajouter au panier</a></button>	
             {% if product.owner == app.user %}
               <button class="btn btn-dark"><a href="{{ path('app_edit_product',{'id':product.id}) }}">Modifier</a></button>	
+              <button class="btn btn-dark"><a href="#">Supprimer</a></button>	
+            {% else %}
+              <button class="btn btn-dark"><a href="#">Acheter maintenant</a></button>	
+              <button class="btn btn-dark"><a href="{{ path('app_user_cart_add', {'id': product.id}) }}">Ajouter au panier</a></button>	
             {% endif %}	
           </div>
          </div>
